hyrprland config update

--- a/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/binds.conf
+++ b/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/binds.conf
@@ -22,8 +22,8 @@ bind	=	$CTRL,		Escape,			exec,			$StartMenu
 bind	=	$Win,		S,			exec,			$StartMenu
 
 	# TUI Programs
-bind	=	$Win,		T,			exec,			$Terminal /bin/bash /System/Terminal.sh
-bind	=	$CTRL&$Win,	T,			exec,			$Terminal /bin/bash /System/Bootleg_Sudo.sh
+bind	=	$Win,		T,			exec,			$Terminal /bin/bash /System/Library/Applications/bash_user.sh
+bind	=	$CTRL&$Win,	T,			exec,			$Terminal /bin/bash /System/Library/Applications/bash_root.sh
 
 bind	=	$Win,		H,			exec,			$Terminal "htop"
 bind	=	$CTRL&$Win,	H,			exec,			$Terminal "radeontop"
@@ -83,6 +83,7 @@ bindm	=	$Win,		mouse:273,		resizewindow
 # Miscellaneous Binds
 
 # Workspaces Binds
+bind	=	$Win,		tab,			exec,			hyprctl dispatch togglespecialworkspace
 	# Note this is retarded because I have an Azerty keyboard and the normal binds don't fucking work
 bind	=	$Win,		ampersand,		workspace,		1
 bind	=	$Win,		eacute,			workspace,		2
@@ -109,11 +110,24 @@ bind	=	$Win SHIFT,	ccedilla,		movetoworkspace,	9
 bind	=	$Win SHIFT,	agrave,			movetoworkspace,	10
 bind	=	$Win SHIFT,	parenright,		movetoworkspace,	11
 bind	=	$Win SHIFT,	equal,			movetoworkspace,	12
+	# Gotta find a better key combination, this kinda blows and isn't comfortable
+bind	=	$Win ALT,	ampersand,		movetoworkspacesilent,	1
+bind	=	$Win ALT,	eacute,			movetoworkspacesilent,	2
+bind	=	$Win ALT,	quotedbl,		movetoworkspacesilent,	3
+bind	=	$Win ALT,	apostrophe,		movetoworkspacesilent,	4
+bind	=	$Win ALT,	parenleft,		movetoworkspacesilent,	5
+bind	=	$Win ALT,	minus,			movetoworkspacesilent,	6
+bind	=	$Win ALT,	egrave,			movetoworkspacesilent,	7
+bind	=	$Win ALT,	underscore,		movetoworkspacesilent,	8
+bind	=	$Win ALT,	ccedilla,		movetoworkspacesilent,	9
+bind	=	$Win ALT,	agrave,			movetoworkspacesilent,	10
+bind	=	$Win ALT,	parenright,		movetoworkspacesilent,	11
+bind	=	$Win ALT,	equal,			movetoworkspacesilent,	12
 
-# Quit Hyprland and other System Management Binds
+# System Keys
 bind	=	$System,	Q,			exit,
 bind	=	$System,	R,			exec,			systemctl reboot
-bind	=	$System,	U,			exec,			$Terminal /bin/bash /System/System_Update.sh
+bind	=	$System,	U,			exec,			$Terminal /bin/bash /System/Library/Scripts/update.sh
 bind	=	$System,	W,			exec,			$Terminal /bin/bash /System/LSW-VM/Launch_VM.sh
 
 bind	=	$Win,		L,			exec,			systemctl suspend
