--- a/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/environement.conf
+++ b/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/environement.conf
@@ -3,14 +3,23 @@
 # https://wiki.hyprland.org/Configuring/Environment-variables/
 # ===============================================
 
-env	=	GTK_THEME,			Fluent Light
-env	=	XCURSOR_SIZE,			12
-env	=	XCURSOR_THEME,			macOS-BigSur
-env	=	HYPRCURSOR_SIZE,		12
+# Theming
+env	=	GTK_THEME,				Fluent-round-Dark-compact
+env	=	XCURSOR_SIZE,				24
+env	=	XCURSOR_THEME,				macOS-BigSur
+env	=	HYPRCURSOR_SIZE,			24
 
-	# xWayland bullshit
-env	=	ELECTRON_OZONE_PLATFORM_HINT,	wayland
-env	=	QT_QPA_PLATFORM,		wayland
+
+
+# Wayland bullshit
+env	=	GDK_BACKEND,				wayland,x11,*
+env	=	QT_QPA_PLATFORM,			wayland;xcb
+env	=	QT_WAYLAND_DISABLE_WINDOWDECORATION,	1
+env	=	SDL_VIDEODRIVER,			wayland
+env	=	CLUTTER_BACKEND,			wayland
+
+env	=	ELECTRON_OZONE_PLATFORM_HINT,		wayland
+env	=	QT_QPA_PLATFORM,			wayland
 xwayland {
 	force_zero_scaling = false
 	use_nearest_neighbor = false
