--- a/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/environement.conf
+++ b/WAYLAND_DE/rootfs/root/.config/hypr/fluentsky/environement.conf
@@ -4,7 +4,7 @@
 # ===============================================
 
 # Theming
-env	=	GTK_THEME,				Fluent-round-Dark-compact
+env	=	GTK_THEME,				Fluent-round-red-Dark-compact:dark
 env	=	XCURSOR_SIZE,				24
 env	=	XCURSOR_THEME,				macOS-BigSur
 env	=	HYPRCURSOR_SIZE,			24
