--- a/WAYLAND_DE/rootfs/root/.config/foot/root.ini
+++ b/WAYLAND_DE/rootfs/root/.config/foot/root.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font	=	SF Mono:size=9:style=Heavy
+font	=	Fixedsys Excelsior:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -83,8 +83,8 @@ blink-rate=250
 
 [colors]
 alpha=0.8
-background=FEFEFF # Sirius White
-foreground=241224 # Sirius Black
+background=080408 # Arellyan Black
+foreground=F6F6FD # Sirius Normal
 flash=9F0C19 # Wakamo Darker
 flash-alpha=0.15
 
