--- a/WAYLAND_DE/rootfs/root/.config/hypr/common/binds.conf
+++ b/WAYLAND_DE/rootfs/root/.config/hypr/common/binds.conf
@@ -23,7 +23,7 @@ bind	=	$Win,		S,			exec,			$StartMenu
 
 	# TUI Programs
 bind	=	$Win,		T,			exec,			$Terminal /bin/bash /System/Library/Applications/bash_user.sh
-bind	=	$CTRL&$Win,	T,			exec,			$Terminal -c ~.config/foot/root.ini /bin/bash /System/Library/Applications/bash_root.sh
+bind	=	$CTRL&$Win,	T,			exec,			$Terminal -c ~/.config/foot/root.ini /bin/bash /System/Library/Applications/bash_root.sh
 
 bind	=	$Win,		H,			exec,			$Terminal "htop"
 bind	=	$CTRL&$Win,	H,			exec,			$Terminal "radeontop"
