Update settings - root.ini

--- a/WAYLAND_DE/rootfs/root/.config/gtk-3.0/settings - root.ini
+++ b/WAYLAND_DE/rootfs/root/.config/gtk-3.0/settings - root.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Fluent-round-red-Dark-compact
 gtk-icon-theme-name=Fluent-red-dark
-gtk-font-name=Fixedsys Excelsior 12
+gtk-font-name=SF Compact Display 10
 gtk-cursor-theme-name=macOS-BigSur
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
