Color fixing light mode

--- a/WAYLAND_DE/rootfs/System/Configuration/Tofi/Light.cfg
+++ b/WAYLAND_DE/rootfs/System/Configuration/Tofi/Light.cfg
@@ -1,57 +1,57 @@
 # General Font & Text Settings
-font					=	"/usr/share/fonts/Apple Fonts/SF-Compact/SF-Compact-Display.otf"
-font-size				=	10
-font-features				=	""
-font-variations				=	""
-hint-font				=	true
-text-color				=	#000000
+font                    =   "/usr/share/fonts/Apple Fonts/SF-Compact/SF-Compact-Display.otf"
+font-size               =   10
+font-features               =   ""
+font-variations             =   ""
+hint-font               =   true
+text-color              =   #000000
 #^Does nothing
 
 # Prompt Text Settings
-prompt-text				=	"🔎 "
-prompt-padding				=	0
+prompt-text             =   "🔎 "
+prompt-padding              =   0
 
-prompt-color				=	#FFFFFFff
-prompt-background			=	#00000000
-prompt-background-padding		=	0
-prompt-background-corner-radius		=	0
+prompt-color                =   #FFFFFFff
+prompt-background           =   #00000000
+prompt-background-padding       =   0
+prompt-background-corner-radius     =   0
 
 # Search Placeholder Settings
-placeholder-text			=	"Type to search"
-placeholder-color			=	#16081680
+placeholder-text            =   "Type to search"
+placeholder-color           =   #16081680
 #^ Ascellyan Black 50%
-placeholder-background			=	#00000000
-placeholder-background-padding		=	0
-placeholder-background-corner-radius	=	0
+placeholder-background          =   #00000000
+placeholder-background-padding      =   0
+placeholder-background-corner-radius    =   0
 
 # Input Text Settings
-input-color				=	#FEFEFFff
-#^ Sirius White
-input-background			=	#00000000
-input-background-padding		=	0
-input-background-corner-radius		=	0
+input-color             =   #080408ff
+#^ Arellyan Black
+input-background            =   #00000000
+input-background-padding        =   0
+input-background-corner-radius      =   0
 
 # Results Settings
-default-result-color			=	#16081680
+default-result-color            =   #16081680
 #^ Ascellyan Black 50%
-default-result-background		=	#00000000
-default-result-background-padding	=	0
-default-result-background-corner-radius	=	0
+default-result-background       =   #00000000
+default-result-background-padding   =   0
+default-result-background-corner-radius =   0
 
 # Selected Settings
-selection-color				=	#080408ff
+selection-color             =   #080408ff
 #^ Arellyan Black
-selection-background			=	#FFFFFF00
-selection-background-padding		=	0
-selection-background-corner-radius	=	0
-selection-match-color			=	#FF42FFcc
+selection-background            =   #FFFFFF00
+selection-background-padding        =   0
+selection-background-corner-radius  =   0
+selection-match-color           =   #FF42FFcc
 #^ Mika Darker 80%
 
 # Cursor Settings
-text-cursor-style			=	block
-text-cursor-color			=	#FFFFFFff
-text-cursor-background			=	#FFFFFFff
-text-cursor-corner-radius		=	0
+text-cursor-style           =   block
+text-cursor-color           =   #FFFFFFff
+text-cursor-background          =   #FFFFFFff
+text-cursor-corner-radius       =   0
 
 num-results = 0
 result-spacing = 25
@@ -106,3 +106,4 @@ terminal = foot
 late-keyboard-init = false
 multi-instance = false
 ascii-input = false
+
