--- a/WAYLAND_DE/rootfs/root/.config/tofi/config
+++ b/WAYLAND_DE/rootfs/root/.config/tofi/config
@@ -1,108 +1,1 @@
-# General Font & Text Settings
-font					=	"/usr/share/fonts/Apple Fonts/SF-Compact/SF-Compact-Display.otf"
-font-size				=	12
-font-features				=	""
-font-variations				=	""
-hint-font				=	true
-text-color				=	#000000
-#^Does nothing
-
-# Prompt Text Settings
-prompt-text				=	"🔎 "
-prompt-padding				=	0
-
-prompt-color				=	#FFFFFFff
-prompt-background			=	#00000000
-prompt-background-padding		=	0
-prompt-background-corner-radius		=	0
-
-# Search Placeholder Settings
-placeholder-text			=	"Type to search"
-placeholder-color			=	#16081680
-#^ Ascellyan Black 50%
-placeholder-background			=	#00000000
-placeholder-background-padding		=	0
-placeholder-background-corner-radius	=	0
-
-# Input Text Settings
-input-color				=	#FEFEFFff
-#^ Sirius White
-input-background			=	#00000000
-input-background-padding		=	0
-input-background-corner-radius		=	0
-
-# Results Settings
-default-result-color			=	#16081680
-#^ Ascellyan Black 50%
-default-result-background		=	#00000000
-default-result-background-padding	=	0
-default-result-background-corner-radius	=	0
-
-# Selected Settings
-selection-color				=	#080408ff
-#^ Arellyan Black
-selection-background			=	#FFFFFF00
-selection-background-padding		=	0
-selection-background-corner-radius	=	0
-selection-match-color			=	#FF42FFcc
-#^ Mika Darker 80%
-
-# Cursor Settings
-text-cursor-style			=	block
-text-cursor-color			=	#FFFFFFff
-text-cursor-background			=	#FFFFFFff
-text-cursor-corner-radius		=	0
-
-num-results = 0
-result-spacing = 25
-horizontal = true
-min-input-width = 0
-
-width = 100%
-height = 25
-background-color = #F6F6FDe6
-# Sirius Normal 95%
-
-outline-width = 0
-outline-color = #00000000
-
-border-width = 0
-border-color = #F92672
-corner-radius = 0
-
-padding-top = 3
-padding-bottom = 0
-padding-left = 5
-padding-right = 5
-
-clip-to-padding = true
-scale = true
-
-output = ""
-anchor = top
-exclusive-zone = -1
-
-margin-top = 0
-margin-bottom = 0
-margin-left = 0
-margin-right = 0
-
-hide-cursor = false
-text-cursor = false
-
-history = false
-matching-algorithm = normal
-require-match = true
-auto-accept-single = false
-
-hide-input = false
-hidden-character = "*"
-
-physical-keybindings = true
-print-index = false
-drun-launch = false
-terminal = foot
-
-late-keyboard-init = false
-multi-instance = false
-ascii-input = false
+include = /System/Configuration/Tofi/Dark.cfg
