--- a/WAYLAND_DE/rootfs/root/.config/xsettingsd/xsettingsd.conf
+++ b/WAYLAND_DE/rootfs/root/.config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
-Net/ThemeName "Fluent-round-pink-Light-compact"
-Net/IconThemeName "Fluent-pink-light"
+Net/ThemeName "Fluent-round-red-Dark-compact"
+Net/IconThemeName "Fluent-red-dark"
 Gtk/CursorThemeName "macOS-BigSur"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 1
