file name changes, fixedsys download, cleaner & fixed hyprland cfg

--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/autostart.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/autostart.conf
@@ -2,5 +2,5 @@
 # Autostarting Programs
 # ===============================================
 
-exec-once	=	swaybg -c 000000 -i $Wallpaper
+exec-once	=	swaybg -c 000000 -m fit -i $Wallpaper
 exec-once	=	$TaskBar
