--- a/WAYLAND_DE/rootfs/home/ascellayn/.config/hypr/hyprland.conf
+++ b/WAYLAND_DE/rootfs/home/ascellayn/.config/hypr/hyprland.conf
@@ -1,5 +1,4 @@
+$Wallpaper	=	"/System/Public/Backgrounds/105175431_p3 == Wallpaper Edit.png"
+
 source = /System/Configuration/Hyprland/Common.conf
 source = /System/Configuration/Hyprland/Light.conf
-
-# Light Mode Wallpaper
-$Wallpaper	=	/System/Public/Backgrounds/"105175431_p3 == Wallpaper Edit.png"
