--- a/WAYLAND_DE/rootfs/root/.config/hypr/hyprland.conf
+++ b/WAYLAND_DE/rootfs/root/.config/hypr/hyprland.conf
@@ -1,6 +1,4 @@
+$Wallpaper	=	"/System/Public/Backgrounds/114465477_p0.png"
+
 source = /System/Configuration/Hyprland/Common.conf
 source = /System/Configuration/Hyprland/Dark.conf
-
-# Dark Mode Wallpaper
-$Wallpaper	=	/System/Public/Backgrounds/114465477_p0.png
-
