--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common.conf
@@ -1,9 +1,12 @@
 source = /System/Configuration/Hyprland/Common/aliases.conf
+source = /System/Configuration/Hyprland/Common/autostart.conf
 source = /System/Configuration/Hyprland/Common/binds.conf
 source = /System/Configuration/Hyprland/Common/environement.conf
 source = /System/Configuration/Hyprland/Common/input.conf
 source = /System/Configuration/Hyprland/Common/monitor.conf
 source = /System/Configuration/Hyprland/Common/visual.conf
+
+source = /System/Configuration/Hyprland/Nvidia.conf
 
 # ===============================================
 # Rendering Configuration
