don't novideo by default

--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common.conf
@@ -6,7 +6,7 @@ source = /System/Configuration/Hyprland/Common/input.conf
 source = /System/Configuration/Hyprland/Common/monitor.conf
 source = /System/Configuration/Hyprland/Common/visual.conf
 
-source = /System/Configuration/Hyprland/Nvidia.conf
+#source = /System/Configuration/Hyprland/Nvidia.conf
 
 # ===============================================
 # Rendering Configuration
