--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Light/environement.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Light/environement.conf
@@ -4,3 +4,4 @@
 # ===============================================
 
 env	=	GTK_THEME,				Fluent-round-pink-Light-compact:light
+env	=	XCURSOR_THEME,				macOS
