--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Dark/environement.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Dark/environement.conf
@@ -4,3 +4,4 @@
 # ===============================================
 
 env	=	GTK_THEME,				Fluent-round-red-Dark-compact:dark
+env	=	XCURSOR_THEME,				macOS-White
