Screenshot binds, plus shit for hyprsplit because hyprland workspaces are FUCKING RETARDED FUCK YOU

--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/binds.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/binds.conf
@@ -5,12 +5,36 @@
 # ===============================================
 
 # Key name Shortcuts
-$Win	=	Super_L
-$CTRL	=	Control_L
-$Alt	=	Alt_L
-$Shift	=	Shift_L
+$Win		=	Super_L
+$CTRL		=	Control_L
+$Alt		=	Alt_L
+$Shift		=	Shift_L
 
-$System	=	$CTRL $Alt $Shift $Win
+$System		=	$CTRL $Alt $Shift $Win
+
+# Number row shortcuts
+$One		=	ampersand
+$Two		=	eacute
+$Three		=	quotedbl
+$Four		=	apostrophe
+$Five		=	parenleft
+$Six		=	minus
+$Seven		=	egrave
+$Eight		=	underscore
+$Nine		=	ccedilla
+$Zero		=	agrave
+$Degree		=	parenright
+$Equal		=	equal
+
+# Workspaces Shenanigans
+$W_Display	=	workspace
+$W_Move		=	movetoworkspace
+$W_MoveSilent	=	movetoworkspacesilent
+
+#$W_Display	=	split:workspace
+#$W_Move	=	split:movetoworkspace
+#$W_MoveSilent	=	split:movetoworkspacesilent
+
 
 # General Binds
 	# GUI Programs
@@ -29,6 +53,11 @@ bind	=	$Win,		H,			exec,			$Terminal "htop"
 
 bind	=	$Win,		N,			exec,			$Terminal "nano"
 
+# Screenshot Binds
+bind	=	$CTRL,		PRINT,			exec,			/bin/bash -c /System/Library/Scripts/screenshot/ctrl_print.sh
+bind	=	$Alt,		PRINT,			exec,			/bin/bash -c /System/Library/Scripts/screenshot/alt_print.sh
+bind	=	$Shift,		PRINT,			exec,			$Terminal /System/Library/Scripts/screenshot/shift_print.sh
+bind	=	$System,	PRINT,			exec,			thunar ~/Pictures/Screenshots/$(date +%Y-%m)
 
 # Media Control Binds
 bind	=	,		XF86AudioRaiseVolume,	exec,			wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
@@ -81,47 +110,48 @@ bindm	=	$Win,		mouse:273,		resizewindow
 
 # Miscellaneous Binds
 
-# Workspaces Binds
-bind	=	$Win,		tab,			exec,			hyprctl dispatch togglespecialworkspace
+# $W_Displays Binds
+bind	=	$Win,		tab,			exec,			hyprctl dispatch togglespecial$W_Display
+
 	# Note this is retarded because I have an Azerty keyboard and the normal binds don't fucking work
-bind	=	$Win,		ampersand,		workspace,		1
-bind	=	$Win,		eacute,			workspace,		2
-bind	=	$Win,		quotedbl,		workspace,		3
-bind	=	$Win,		apostrophe,		workspace,		4
-bind	=	$Win,		parenleft,		workspace,		5
-bind	=	$Win,		minus,			workspace,		6
-bind	=	$Win,		egrave,			workspace,		7
-bind	=	$Win,		underscore,		workspace,		8
-bind	=	$Win,		ccedilla,		workspace,		9
-bind	=	$Win,		agrave,			workspace,		10
-bind	=	$Win,		parenright,		workspace,		11
-bind	=	$Win,		equal,			workspace,		12
-	# Also if you need more than 4 workspaces wtf are you doing bro
-bind	=	$Win SHIFT,	ampersand,		movetoworkspace,	1
-bind	=	$Win SHIFT,	eacute,			movetoworkspace,	2
-bind	=	$Win SHIFT,	quotedbl,		movetoworkspace,	3
-bind	=	$Win SHIFT,	apostrophe,		movetoworkspace,	4
-bind	=	$Win SHIFT,	parenleft,		movetoworkspace,	5
-bind	=	$Win SHIFT,	minus,			movetoworkspace,	6
-bind	=	$Win SHIFT,	egrave,			movetoworkspace,	7
-bind	=	$Win SHIFT,	underscore,		movetoworkspace,	8
-bind	=	$Win SHIFT,	ccedilla,		movetoworkspace,	9
-bind	=	$Win SHIFT,	agrave,			movetoworkspace,	10
-bind	=	$Win SHIFT,	parenright,		movetoworkspace,	11
-bind	=	$Win SHIFT,	equal,			movetoworkspace,	12
+bind	=	$Win,		$One,			$W_Display,		1
+bind	=	$Win,		$Two,			$W_Display,		2
+bind	=	$Win,		$Three,			$W_Display,		3
+bind	=	$Win,		$Four,			$W_Display,		4
+bind	=	$Win,		$Five,			$W_Display,		5
+bind	=	$Win,		$Six,			$W_Display,		6
+bind	=	$Win,		$Seven,			$W_Display,		7
+bind	=	$Win,		$Eight,			$W_Display,		8
+bind	=	$Win,		$Nine,			$W_Display,		9
+bind	=	$Win,		$Zero,			$W_Display,		10
+bind	=	$Win,		$Degree,		$W_Display,		11
+bind	=	$Win,		$Equal,			$W_Display,		12
+	# Also if you need more than 4 $W_Displays wtf are you doing bro
+bind	=	$Win SHIFT,	$One,			$W_Move,		1
+bind	=	$Win SHIFT,	$Two,			$W_Move,		2
+bind	=	$Win SHIFT,	$Three,			$W_Move,		3
+bind	=	$Win SHIFT,	$Four,			$W_Move,		4
+bind	=	$Win SHIFT,	$Five,			$W_Move,		5
+bind	=	$Win SHIFT,	$Six,			$W_Move,		6
+bind	=	$Win SHIFT,	$Seven,			$W_Move,		7
+bind	=	$Win SHIFT,	$Eight,			$W_Move,		8
+bind	=	$Win SHIFT,	$Nine,			$W_Move,		9
+bind	=	$Win SHIFT,	$Zero,			$W_Move,		10
+bind	=	$Win SHIFT,	$Degree,		$W_Move,		11
+bind	=	$Win SHIFT,	$Equal,			$W_Move,		12
 	# Gotta find a better key combination, this kinda blows and isn't comfortable
-bind	=	$Win ALT,	ampersand,		movetoworkspacesilent,	1
-bind	=	$Win ALT,	eacute,			movetoworkspacesilent,	2
-bind	=	$Win ALT,	quotedbl,		movetoworkspacesilent,	3
-bind	=	$Win ALT,	apostrophe,		movetoworkspacesilent,	4
-bind	=	$Win ALT,	parenleft,		movetoworkspacesilent,	5
-bind	=	$Win ALT,	minus,			movetoworkspacesilent,	6
-bind	=	$Win ALT,	egrave,			movetoworkspacesilent,	7
-bind	=	$Win ALT,	underscore,		movetoworkspacesilent,	8
-bind	=	$Win ALT,	ccedilla,		movetoworkspacesilent,	9
-bind	=	$Win ALT,	agrave,			movetoworkspacesilent,	10
-bind	=	$Win ALT,	parenright,		movetoworkspacesilent,	11
-bind	=	$Win ALT,	equal,			movetoworkspacesilent,	12
+bind	=	$Win ALT,	$One,			$W_MoveSilent,		1
+bind	=	$Win ALT,	$Two,			$W_MoveSilent,		2
+bind	=	$Win ALT,	$Three,			$W_MoveSilent,		3
+bind	=	$Win ALT,	$Four,			$W_MoveSilent,		4
+bind	=	$Win ALT,	$Five,			$W_MoveSilent,		5
+bind	=	$Win ALT,	$Six,			$W_MoveSilent,		6
+bind	=	$Win ALT,	$Seven,			$W_MoveSilent,		7
+bind	=	$Win ALT,	$Eight,			$W_MoveSilent,		8
+bind	=	$Win ALT,	$Nine,			$W_MoveSilent,		9
+bind	=	$Win ALT,	$Zero,			$W_MoveSilent,		10
+bind	=	$Win ALT,	$Degree,		$W_MoveSilent,		11
+bind	=	$Win ALT,	$Equal,			$W_MoveSilent,		12
 
 # System Keys
 bind	=	$System,	Q,			exit,
