Bind for regular print screen

--- a/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/binds.conf
+++ b/WAYLAND_DE/rootfs/System/Configuration/Hyprland/Common/binds.conf
@@ -54,6 +54,7 @@ bind	=	$Win,		H,			exec,			$Terminal "htop"
 bind	=	$Win,		N,			exec,			$Terminal "nano"
 
 # Screenshot Binds
+bind	=	,		PRINT,			exec,			/bin/bash -c /System/Library/Scripts/screenshot/print.sh
 bind	=	$CTRL,		PRINT,			exec,			/bin/bash -c /System/Library/Scripts/screenshot/ctrl_print.sh
 bind	=	$Alt,		PRINT,			exec,			/bin/bash -c /System/Library/Scripts/screenshot/alt_print.sh
 bind	=	$Shift,		PRINT,			exec,			$Terminal /System/Library/Scripts/screenshot/shift_print.sh
